--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      </head>
   
     <body>
- <div id = "container" style="background-color:powderblue;>
+ <div id = "container" style="background-color:#f5f5dc;>
         <img src="https://cdn.discordapp.com/attachments/722832729623887924/760565620696678460/unknown.png" width="500" height="300">
 
    
