--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>Prject</title>
      </head>
   
-    <body>
+    <body style="background-color:#f5f5dc;>
       xxxxxxxxxxxxxxxxxxxxxxxxx
- <div id = "container" style="background-color:#f5f5dc;>
+ <div id = "container">
         <img src="https://cdn.discordapp.com/attachments/722832729623887924/760565620696678460/unknown.png" width="500" height="300">
 
    
