--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Prject</title>
      </head>
   
-    <body style="background-color:#f5f5dc;>
+    <body style="background-color:fff8e7;>
        <img src="https://cdn.discordapp.com/attachments/722832729623887924/760565620696678460/unknown.png" width="1900" height="300">
  <div id = "container">
    </div>
