--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Prject</title>
+    <title>Project</title>
      </head>
   
     <body style="background-color:blue;>
