--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Project</title>
      </head>
   
-    <body style="background-color:blue;>
-       <img src="https://cdn.discordapp.com/attachments/722832729623887924/760565620696678460/unknown.png" width="1900" height="300">
+    <body style="background-color:#fdf5e6;>
+       <img src="https://cdn.discordapp.com/attachments/722832729623887924/760565620696678460/unknown.png" width="400" height="300">
  <div id = "container">
    </div>
       </body>
