--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>Project</title>
      </head>
   
-    <body style="background-color:#fdf5e6;>
+    <body>
+      sssss
+       style="background-color:#fdf5e6;
                  
                  
        <img src="https://cdn.discordapp.com/attachments/722832729623887924/760565620696678460/unknown.png" width="500" height="400">
