--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
      </head>
   
     <body style="background-color:#fdf5e6;>
+    <body style="background-color:#fdf5e6;>
       vvvvvvvvvvvvvvvvvvvvv
        style="background-color:#fdf5e6;
                  
