--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <title>Project</title>
      </head>
-  
-    <body style="background-color:#fdf5e6;>
-    <body style="background-color:#fdf5e6;>
-      vvvvvvvvvvvvvvvvvvvvv
-       style="background-color:#fdf5e6;
+  cccccccccccccccccccccccccccc
+    <body>
+   
+ 
                  
                  
        <img src="https://cdn.discordapp.com/attachments/722832729623887924/760565620696678460/unknown.png" width="500" height="400">
