--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <title>Project</title>
+     <style>
+    body { background-color: #FF0000; }
+  </style>
      </head>
-  cccccccccccccccccccccccccccc
+  xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
     <body>
    
  
