--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
      </head>
   
     <body>  
-       <img src="https://cdn.discordapp.com/attachments/722832729623887924/765655152153198652/Image1.png" width="300" height="300">
+      <div id ="container">
+
+        <header>
+             <img src="https://cdn.discordapp.com/attachments/722832729623887924/765655152153198652/Image1.png" width="300" height="300"> 
+               
+          <a href = "login.html">Login</a>
+          <ul>
+            <li><a href ="index.html">Home</a></li>
+            <li><a href = "categories.html">categories</a></li>
+            <li><a href = "Add-items.html">Add items</a></li>
+            <li> <a href = "login.html">Login</a></li>
+          </ul>
+        </header>
+        </div>
       </body>
    
   </html>
