--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  gggggggggggggggggggggggggg
+  lllllllllllll
   <head>
     <title>Project</title>
      <style>
@@ -9,12 +9,12 @@
      </head>
   
     <body>  
-                <img src="https://cdn.discordapp.com/attachments/722832729623887924/765655152153198652/Image1.png" width="300" height="300"> 
 
       <div id ="container">
 
         <header>
-               
+   <img src="https://cdn.discordapp.com/attachments/722832729623887924/765655152153198652/Image1.png" width="300" height="300"> 
+
           <ul>
             <li><a href ="index.html">Home</a></li>
             <li><a href = "categories.html">categories</a></li>
