--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   ddddddddddddddddddddd
   <head>
     <title>Project</title>
+      <link rel="stylesheet" href="style.css" >
+
      <style>
     body { background-color: #fff8e7; }
   </style>
