--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
    <img src="https://cdn.discordapp.com/attachments/722832729623887924/765655152153198652/Image1.png" width="300" height="300"> 
 
           <ul>
-            <li><a href ="index.html">Home</a></li>
+            <li><a href="index.html" target="_blank"> 
+              <button type="button">Home</button> </a></li>
             <li><a href = "categories.html">categories</a></li>
             <li><a href = "Add-items.html">Add items</a></li>
             <li> <a href = "login.html">Login</a></li>
