--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 
           <ul>
             <li>
-            <a href="index.html" class="button">Link Button</a>
-                  <button class="button">Home</button>
+            <a href="index.html" target="_blank"> <button type="button">Home</button> </a>
             </li>
             <li><a href = "categories.html">categories</a></li>
             <li><a href = "Add-items.html">Add items</a></li>
