--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="index.html" target="_blank"> <button type="button">Home</button> </a>
             </li>
             <li><a href = "categories.html">categories</a></li>
-            <li><a href = "Add-items.html">Add items</a></li>
+            <li><a href = "addItems.html">Add items</a></li>
             <li> <a href = "login.html">Login</a></li>
           </ul>
         </header>
