--- a/addItems.html
+++ b/addItems.html
@@ -9,6 +9,21 @@
      </head>
   
     <body>  
+       <div id ="container">
+
+        <header>
+   <img src="https://cdn.discordapp.com/attachments/722832729623887924/765655152153198652/Image1.png" width="300" height="300"> 
+
+          <ul>
+            <li>
+            <a href="index.html" target="_blank"> <button type="button">Home</button> </a>
+            </li>
+            <li><a href = "categories.html">categories</a></li>
+            <li><a href = "addItems.html">Add items</a></li>
+            <li> <a href = "login.html">Login</a></li>
+          </ul>
+        </header>
+        </div>
 
 <script type="text/javascript">
    window.addEventListener('load', function() {
