--- a/addItems.html
+++ b/addItems.html
@@ -12,7 +12,7 @@
        <div id ="container">
 
         <header>
-   <img src="https://cdn.discordapp.com/attachments/722832729623887924/765655152153198652/Image1.png" width="300" height="300"> 
+  <p <img src="https://cdn.discordapp.com/attachments/722832729623887924/765655152153198652/Image1.png" width="300" height="300"></p> 
 
           <ul>
             <li>
