--- a/addItems.html
+++ b/addItems.html
@@ -12,8 +12,8 @@
        <div id ="container">
 
         <header>
-  <p <img src="https://cdn.discordapp.com/attachments/722832729623887924/765655152153198652/Image1.png" width="300" height="300"></p> 
-
+  
+              <img src="https://cdn.discordapp.com/attachments/722832729623887924/765655152153198652/Image1.png" class="image1">
           <ul>
             <li>
             <a href="index.html" target="_blank"> <button type="button">Home</button> </a>
