--- a/addItems.html
+++ b/addItems.html
@@ -13,7 +13,7 @@
 
         <header>
   
-              <img src="https://cdn.discordapp.com/attachments/722832729623887924/765655152153198652/Image1.png" class="image1">
+              <img src 1="https://cdn.discordapp.com/attachments/722832729623887924/765655152153198652/Image1.png" class="image1">
           <ul>
             <li>
             <a href="index.html" target="_blank"> <button type="button">Home</button> </a>
@@ -42,8 +42,9 @@ function imageIsLoaded() {
 }
 </script>
 
-
+<p>
 <input type='file' />
 </br><img id="myImg" src="#" alt="your image" height=200 width=100>
+  </p>
   </body>
 </html>
